--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,12 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>jborg</groupId>
   <artifactId>gtdForBash</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>jar</packaging>
 
   <name>gtdForBash</name>
   <description>A_simple_gtdForBash.</description>
@@ -25,13 +26,6 @@
 		<artifactId>junit-jupiter-engine</artifactId>
 		<version>5.9.2</version>
     	<scope>test</scope>
-	</dependency>
-
-	<dependency>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-assembly-plugin</artifactId>
-		<version>3.4.2</version>
-		<type>maven-plugin</type>
 	</dependency>
 
 	<dependency>
@@ -56,25 +50,25 @@
  	<pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved 					to parent pom) -->
 
  	 	<plugins>
-			<plugin>
-				<artifactId>maven-clean-plugin</artifactId>
-				<version>3.1.0</version>
-			</plugin>
-		
-			<plugin>
-				<artifactId>maven-site-plugin</artifactId>
-				<version>3.7.1</version>
-			</plugin>
 
 			<plugin>
-				<artifactId>maven-project-info-reports-plugin</artifactId>
-				<version>3.0.0</version>
-			</plugin>
-		
-        <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
-			<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>3.0.2</version>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+					
+					<executions>
+						
+						<execution>
+							<goals>
+								<goal>repackage</goal>
+							</goals>
+            				
+            				<configuration>
+								<classifier>spring-boot</classifier>
+								<mainClass>jborg.gtdForBash.GTDCLI</mainClass>
+							</configuration>
+						</execution>
+					
+					</executions>
 			</plugin>
 
 			<plugin>
@@ -86,39 +80,12 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.1</version>
 			</plugin>
-			
-	<plugin>
-		<!-- Build an executable JAR -->
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-jar-plugin</artifactId>
-		<version>3.1.0</version>
-			<configuration>
-					<archive>
-						<manifest>
-							<addClasspath>true</addClasspath>
-					<!-- here we specify that we want to use the main method within the App class -->
-							<mainClass>jborg.gtdForBash.GTDCLI</mainClass>
-						</manifest>
-					</archive>
-				</configuration>
-			</plugin>
-		
-			<plugin>
-				<artifactId>maven-install-plugin</artifactId>
-				<version>2.5.2</version>
-			</plugin>
-
-			<plugin>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.8.2</version>
-			</plugin>
 		
 	      </plugins>
       
-	  </pluginManagement>
-	  
-	          
-		<resources>
+      </pluginManagement>   
+          
+      <resources>
 
      		<resource>
        			<directory>${project.basedir}/gtdResources</directory>
@@ -130,13 +97,5 @@
 
    		</resources>
 
-  </build>
-
-  <reporting>
-	<plugins>
-		<plugin>
-		        <artifactId>maven-project-info-reports-plugin</artifactId>
-		</plugin>
-	</plugins>
-  </reporting>
+	</build>
 </project>
