Some Filehandling issues and new Command(view notes). some how pom also.

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>jborg</groupId>
   <artifactId>gtdForBash</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>gtdForBash</name>
@@ -98,4 +97,5 @@
    		</resources>
 
 	</build>
+  <version>Beta-0.5</version>
 </project>
