--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>jborg</groupId>
   <artifactId>gtdForBash</artifactId>
+  <version>Beta-0.5</version>
+
   <packaging>jar</packaging>
 
   <name>gtdForBash</name>
@@ -42,6 +44,7 @@
 		<!--<systemPath>/home/bernstein/.m2/repository/jborg/myToolBoxMavenOld/0.0.1-SNAPSHOT/myToolBoxMavenOld-0.0.1-SNAPSHOT.jar</systemPath>
 		-->
 	</dependency>
+	
   </dependencies>
 
 
@@ -53,7 +56,8 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-					
+				<version>3.1.5</version>
+
 					<executions>
 						
 						<execution>
@@ -83,10 +87,11 @@
 	      </plugins>
       
       </pluginManagement>   
+      
           
-      <resources>
+		<resources>
 
-     		<resource>
+			<resource>
        			<directory>${project.basedir}/gtdResources</directory>
      		</resource>
 
@@ -97,5 +102,4 @@
    		</resources>
 
 	</build>
-  <version>Beta-0.5</version>
 </project>
