--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,15 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.1</version>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>3.1.0</version>
+				<configuration>
+					<mainClass>jborg.gtdForBash.GTDCLI</mainClass>
+				</configuration>
+			</plugin>
 		
 	      </plugins>
       
