--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
 		-->
 	</dependency>
 	
+		  	<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<version>8.0.33</version>
+		</dependency>
+
   </dependencies>
 
 
