--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,14 @@
 
  	<build>
  
+   <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>3.2.5</version> <!-- update as needed -->
+    </plugin>
+  </plugins>
+
 		<resources>
 			
 			<resource>
