--- a/pom.xml
+++ b/pom.xml
@@ -57,8 +57,54 @@
  	</dependencies>
 
  	<build>
+		
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.4.2</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>jborg.gtdForBash.GTDCLI</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>		
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+ 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.5.4</version>
+ 			</plugin>
+ 			
+ 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.5.0</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+                					<goal>shade</goal>
+            					</goals>
+						<configuration>
+							<createDependencyReducedPom>true</createDependencyReducedPom>
+							<transformers>
+								<transformer                       implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>jborg.gtdForBash.GTDCLI</mainClass>
+								</transformer>
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
 
 		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
 			
 			<resource>
        				<directory>${project.basedir}/gtdResources</directory>
